--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>Tau</groupId>
-  <artifactId>Ci-course-project</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  
-  <properties>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>Tau</groupId>
+	<artifactId>Ci-course-project</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+
+	<properties>
 		<selenium.version>3.14.0</selenium.version>
 		<testng.version>6.9.10</testng.version>
 	</properties>
@@ -44,6 +46,11 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.18.1</version>
 				<configuration>
+					<configuration>	        
+						<skipTests>false</skipTests>    
+					</configuration>
+					<parallel>methods</parallel>
+					<threadCount>2</threadCount>
 					<suiteXmlFiles>
 						<suiteXmlFile>testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
@@ -51,7 +58,7 @@
 			</plugin>
 		</plugins>
 	</build>
-  
-  
+
+
 </project>
 
